Add /api/v3/events endpoint
